--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password =123456
 spring.jpa-show-sql =true
 spring.jpa.databse =mysql
 openweathermap.key =3e71752c15eb987292251b8dba9e3805
+logging.config = classpath:logback-spring.xml
